add style global variables

--- a/src/app.css
+++ b/src/app.css
@@ -2,11 +2,17 @@
 
 :root {
   --sig: #FFCA36;
-  --bg: #161728;
-  --bg-sideBar: #23263D;
-  --bg-topBar: #4552b4;
-  --font-white: #DDDDDD;
-  --font-black: #161728;
+	--font-white: #DDDDDD;
+	--font-black: #161728;
+	--font-light-gray: #686868;
+	--font-dark-gray: #565657;
+	--font-red: #eb5a40;
+	--bg: #161728;
+	--bg-bar: #23263D;
+	--bg-button: #23263D;
+	--bg-input: #000000;
+	--border-input: #30363d;
+	--border: #21262D;
 }
 
 * {
