--- a/src/app.css
+++ b/src/app.css
@@ -8,7 +8,7 @@
 	--font-dark-gray: #565657;
 	--font-red: #eb5a40;
 	--bg: #161728;
-	--bg-bar: #23263D;
+	--bg-sideBar: #23263D;
 	--bg-button: #23263D;
 	--bg-input: #000000;
 	--border-input: #30363d;
