--- a/src/app.css
+++ b/src/app.css
@@ -2,17 +2,17 @@
 
 :root {
   --sig: #FFCA36;
-	--font-white: #DDDDDD;
-	--font-black: #161728;
-	--font-light-gray: #686868;
-	--font-dark-gray: #565657;
-	--font-red: #eb5a40;
-	--bg: #161728;
-	--bg-sideBar: #23263D;
-	--bg-button: #23263D;
-	--bg-input: #000000;
-	--border-input: #30363d;
-	--border: #21262D;
+  --font-white: #DDDDDD;
+  --font-black: #161728;
+  --font-light-gray: #686868;
+  --font-dark-gray: #565657;
+  --font-red: #eb5a40;
+  --bg: #161728;
+  --bg-sideBar: #23263D;
+  --bg-button: #23263D;
+  --bg-input: #000000;
+  --border-input: #30363d;
+  --border: #21262D;
 }
 
 * {
@@ -51,7 +51,7 @@ input {
   background-color: var(--bg-input);
 }
 
-input:focus{
+input:focus {
   outline: none;
 }
 
@@ -82,6 +82,11 @@ button {
 .btn-sig {
   background-color: var(--sig);
   color: var(--bg);
+}
+
+.btn-gray {
+  background-color: var(--font-dark-gray);
+  color: var(--font-white);
 }
 
 button:hover {
