--- a/src/app.css
+++ b/src/app.css
@@ -43,16 +43,24 @@ a {
   text-decoration: none;
 }
 
-input {
-  border: none;
+/** 
+  input elements
+*/
+
+input, textarea, select{
+  padding : 4px 6px;
+  border : none;
   border-radius: 10px;
-  padding: 4px 6px;
-  color: var(--font-white);
   background-color: var(--bg-input);
+  color : var(--font-white);
 }
 
-input:focus {
-  outline: none;
+input, select, textarea:focus{
+  outline : none;
+}
+
+input, select, textarea:hover{
+  cursor : pointer;
 }
 
 button {
@@ -68,6 +76,18 @@ button {
   border: none;
   border-radius: 10px;
   padding: 0.75em 1.5em;
+  background-color: var(--bg-button);
+}
+
+button:hover {
+  cursor : pointer;
+}
+
+.btn-circle{
+  width : 20px;
+  height : 20px;
+  background: none;
+  border : none;
   background-color: var(--bg-button);
 }
 
