--- a/src/app.css
+++ b/src/app.css
@@ -47,20 +47,26 @@ a {
   input elements
 */
 
-input, textarea, select{
-  padding : 4px 6px;
-  border : none;
+input,
+textarea,
+select {
+  padding: 4px 6px;
+  border: none;
   border-radius: 10px;
   background-color: var(--bg-input);
-  color : var(--font-white);
+  color: var(--font-white);
 }
 
-input, select, textarea:focus{
-  outline : none;
+input,
+select,
+textarea:focus {
+  outline: none;
 }
 
-input, select, textarea:hover{
-  cursor : pointer;
+input,
+select,
+textarea:hover {
+  cursor: pointer;
 }
 
 button {
@@ -80,14 +86,14 @@ button {
 }
 
 button:hover {
-  cursor : pointer;
+  cursor: pointer;
 }
 
-.btn-circle{
-  width : 20px;
-  height : 20px;
+.btn-circle {
+  width: 20px;
+  height: 20px;
   background: none;
-  border : none;
+  border: none;
   background-color: var(--bg-button);
 }
 
@@ -190,4 +196,114 @@ h5 {
 
 .border-thick {
   border-width: 1px;
+}
+
+
+/* 
+  radio 
+*/
+.radio {
+  display: block;
+  position: relative;
+  padding-left: 30px;
+  margin-bottom: 12px;
+  cursor: pointer;
+  font-size: 14px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+
+  .privacy-desc {
+    color: var(--font-light-gray);
+  }
+}
+
+.radio input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 18px;
+  width: 18px;
+  border: 1px solid var(--font-light-gray);
+  background-color: var(--bg);
+  border-radius: 50%;
+}
+
+.radio:hover input~.checkmark {
+  background-color: var(--font-light-gray);
+}
+
+.radio input:checked~.checkmark {
+  border: 1px solid var(--font-light-gray);
+}
+
+.checkmark:after {
+  content: '';
+  position: absolute;
+  display: none;
+}
+
+.radio input:checked~.checkmark:after {
+  display: block;
+}
+
+.radio .checkmark:after {
+  top: 3px;
+  left: 3px;
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: var(--font-white);
+}
+
+/*
+  select box
+*/
+.select-box {
+  position: relative;
+  width: 70%;
+}
+
+.select-box:hover {
+  cursor: pointer;
+}
+
+.select-box::before,
+::after {
+  --size: 0.3rem;
+  position: absolute;
+  content: '';
+  right: 1rem;
+  pointer-events: none;
+}
+
+.select-box::after {
+  border-left: var(--size) solid transparent;
+  border-right: var(--size) solid transparent;
+  border-top: var(--size) solid var(--font-white);
+  top: 55%;
+}
+
+.select-box::before {
+  border-left: var(--size) solid transparent;
+  border-right: var(--size) solid transparent;
+  border-bottom: var(--size) solid var(--font-white);
+  top: 40%;
+}
+
+select {
+  appearance: none;
+  width: 100%;
+  font-size: 13px;
+  padding: 10px 10px;
+  background-color: var(--bg);
+  border: 1px solid var(--font-light-gray);
+  color: var(--font-white);
 }
