--- a/src/app.css
+++ b/src/app.css
@@ -307,3 +307,17 @@ select {
   border: 1px solid var(--font-light-gray);
   color: var(--font-white);
 }
+
+/**
+  scroller
+*/
+
+::-webkit-scrollbar {
+  background-color: transparent;
+  height: 5px;
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+}
