add state tag for 'ready'

--- a/src/app.css
+++ b/src/app.css
@@ -17,16 +17,20 @@
   --focus: #4552b4;
 
   --dark-green: #064e3b;
-  --mid-green : #22a07b;
+  --mid-green: #22a07b;
   --light-green: #6ee7b7;
 
   --dark-blue: #1e3a8a;
-  --mid-blue : #4f67c2;
+  --mid-blue: #4f67c2;
   --light-blue: #93c5fd;
 
-  --dark-red : #7f1d1d;
-  --mid-red : #d46363;
-  --light-red : #fca5a5;
+  --dark-red: #7f1d1d;
+  --mid-red: #d46363;
+  --light-red: #fca5a5;
+
+  --dark-orange: #7c2d12;
+  --mid-orange: #ea580c;
+  --light-orange: #fdba74;
 
 }
 
